--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<header class="header"><h2>Shaw's News</h2></header>
+		<div class="container">
+			<div class="latest-news-section">
+				<h3>Latest News Articles</h3>
+				<ul>
+					<li>Article 1</li>
+					<li>Article 2</li>
+					<li>Article 3</li>
+				</ul>
+			</div>
+			<div class="main-artical">
+				<h3>Main Article</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="pictorial-news-section">
+				<h3>Pictorial News</h3>
+				<div class="imgs">
+					<div class="img1">
+						<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+					</div>
+					<div class="img2">
+						<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+						
+					</div>
+					<div class="img3">
+						<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
